--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doorbot",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Ring.com Doorbell API",
   "main": "doorbot.js",
   "scripts": {
@@ -38,5 +38,8 @@
     "jenkins-mocha": "^4.1.0",
     "nock": "^9.0.2",
     "nyc": "^10.0.0"
+  },
+  "dependencies": {
+    "debug": "^2.6.8"
   }
 }
